--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h3 id="title" style="text-align:center; margin-top:0;">🤖 工业机器人中控台</h3>
         
         <div class="video-stage">
-            <video id="robot-video" src="C:\Users\thepainter\Desktop\project\high T pro\html\robot_arm\robot_arm.mp4" loop muted playsinline></video>
+            <video id="robot-video" src="robot_arm.mp4" loop muted playsinline></video>
             
             <div id="alarm-overlay">
                 <div id="icon-warn" class="alarm-icon">⚠️</div>
@@ -206,3 +206,4 @@
 </body>
 
 </html>
+
